Доработка дизайна сайта

--- a/uflor/html/uflor.html
+++ b/uflor/html/uflor.html
@@ -37,7 +37,7 @@
         <img src="../sources/flour.jpg" alt="">
     </section>
     <section class="decrole">
-        <img src="../sources/decrole.jpg" alt="">
+        <img src="../sources/127381-ORHB4M-978_1.png" alt="">
     </section>
     <footer>
         <p>U</p>
